--- a/Example/BubbleEvent/Base.lproj/Main.storyboard
+++ b/Example/BubbleEvent/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +19,59 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJs-uh-7qW">
+                                <rect key="frame" x="15" y="161" width="345" height="345"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kOC-mK-540">
+                                        <rect key="frame" x="15" y="15" width="315" height="315"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fwm-7L-tZ4" customClass="MyView" customModule="BubbleEvent_Example" customModuleProvider="target">
+                                                <rect key="frame" x="15" y="15" width="285" height="285"/>
+                                                <color key="backgroundColor" systemColor="tintColor"/>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="Fwm-7L-tZ4" secondAttribute="bottom" constant="15" id="At6-l5-9iJ"/>
+                                            <constraint firstItem="Fwm-7L-tZ4" firstAttribute="top" secondItem="kOC-mK-540" secondAttribute="top" constant="15" id="oh5-Za-lal"/>
+                                            <constraint firstItem="Fwm-7L-tZ4" firstAttribute="leading" secondItem="kOC-mK-540" secondAttribute="leading" constant="15" id="qLM-dr-KWH"/>
+                                            <constraint firstAttribute="trailing" secondItem="Fwm-7L-tZ4" secondAttribute="trailing" constant="15" id="u0V-ww-5xI"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstItem="kOC-mK-540" firstAttribute="leading" secondItem="xJs-uh-7qW" secondAttribute="leading" constant="15" id="1Xz-Mi-XtW"/>
+                                    <constraint firstAttribute="bottom" secondItem="kOC-mK-540" secondAttribute="bottom" constant="15" id="ACs-lb-3b5"/>
+                                    <constraint firstAttribute="width" secondItem="xJs-uh-7qW" secondAttribute="height" id="OzK-g5-7vg"/>
+                                    <constraint firstAttribute="trailing" secondItem="kOC-mK-540" secondAttribute="trailing" constant="15" id="P1W-0g-myp"/>
+                                    <constraint firstItem="kOC-mK-540" firstAttribute="top" secondItem="xJs-uh-7qW" secondAttribute="top" constant="15" id="t2c-i0-06U"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xJs-uh-7qW" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="15" id="0GG-50-lvw"/>
+                            <constraint firstItem="xJs-uh-7qW" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="FWg-1r-TOO"/>
+                            <constraint firstAttribute="trailing" secondItem="xJs-uh-7qW" secondAttribute="trailing" constant="15" id="q5B-Sn-n1W"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="22" y="132"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
